test/end-to-end/compile-errors/mutate-parameter.crow
main nat(a string[])
	a := ()
	()
